deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pybsposter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pybsposter
  template:
    metadata:
      labels:
        app: pybsposter
    spec:
      containers:
        - name: pybsposter
          image: harbor.freshbrewed.science/library/pybsposter:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pybsposter
spec:
  selector:
    app: pybsposter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
